<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>uni.kn.zymla</groupId>
	<artifactId>syntax-annotator-glue</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>liger</name>
	<description>A rule-based syntactic annotator for adding relational and attribute value information and semantic representations based on glue semantics</description>

	<properties>
		<java.version>11</java.version>
	</properties>

	<repositories>
		<repository>
			<id>resources</id>
			<url>file:${project.basedir}/liger_resources</url>
		</repository>
	</repositories>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.6.2</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.1.4</version>
				<configuration>
					<from>
						<image>openjdk:13-alpine</image>
					</from>
					<to>
						<image>liger</image>
						<auth>
							<!--suppress MavenModelInspection -->
							<username>${env.CI_REGISTRY_USER}</username>
							<!--suppress MavenModelInspection -->
							<password>${env.CI_REGISTRY_PASSWORD}</password>
						</auth>
					</to>
					<container>
						<jvmFlags>
							<jvmFlag>-XX:+UseContainerSupport</jvmFlag>
							<jvmFlag>-XX:MaxRAMPercentage=90.0</jvmFlag>
						</jvmFlags>
						<args>
							<arg>-res</arg>
							<arg>/liger_resources</arg>
							<arg>-web</arg>
						</args>
						<ports>
							<port>8080</port>
						</ports>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<mainClass>de.ukon.liger.main.DbaMain</mainClass>
					</container>
					<extraDirectories>
						<paths>
							<path>
								<from>liger_resources</from>
								<into>/liger_resources</into>
							</path>
						</paths>
					</extraDirectories>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.ukon.liger.main.DbaMain</mainClass>
						</manifest>

					</archive>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-resources-1</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/liger_resources/</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/liger_resources</directory>
<!--									<filtering>true</filtering>-->
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

        </plugins>
	</build>

</project>
